hphp/test/zend/good/ext/standard/tests/network/ip_x86_64.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (PHP_INT_SIZE == 4) die("skip this test is for >32bit platform only");
}
