hphp/test/zend/bad/ext/standard/tests/general_functions/gettype_settype_variation2.php.skipif
<?php
if (PHP_INT_SIZE != 4) die("skip this test is for 32bit platform only");
?>
if ( strtoupper( substr(PHP_OS, 0, 3) ) == 'MAC' ) {
    die('skip Do not run on MacOS');
}